--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "reactparser",
   "version": "0.0.1",
   "description": "React Parser",
-  "main": "main.ja",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack webpack-dev-server --hot"
+    "build": "rimraf dist/* && webpack",
+    "serve": "rimraf dist/* && webpack && node server.js && webpack-dev-server --hot ",
+    "clean": "rimraf dist/*"
   },
   "keywords": [
     "react",
@@ -19,8 +21,13 @@
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "css-loader": "^0.23.0",
+    "history": "^1.13.1",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "open": "0.0.5",
+    "react-router": "^1.0.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
   },
