--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.23.0",
+    "es6-promise": "^3.0.2",
+    "fetch": "^0.3.6",
     "history": "^1.13.1",
+    "jquery": "^2.1.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "open": "0.0.5",
     "react-router": "^1.0.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.4",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "whatwg-fetch": "^0.10.1"
   },
   "dependencies": {
     "react": "^0.14.2",
