--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "arthur rudyuk",
   "license": "ISC",
   "devDependencies": {
+    "alt": "^0.17.9",
     "babel-core": "^6.1.20",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
